--- a/index.html
+++ b/index.html
@@ -15,16 +15,40 @@
 </head>
 <body>
 
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
+  <main>
+    <div class="card is-rounded">
+      <div class="card-image">
+        <figure class="image is-16by9">
+          <img src="./images/drawers.jpg" alt="Drawers">
+        </figure>
+      </div>
+      <div class="card-content has-background-white">
+        <h2 class="subtitle has-text-weight-bold">
+          Shift the overall look and feel by adding these wonderful 
+          touches to furniture in your home
+        </h2>
+        <p class="is-size-6">Ever been in a room and felt like something was missing? Perhaps 
+          it felt slightly bare and uninviting. I’ve got some simple tips 
+          to help you make any room feel complete.
+        </p>
+        <div class="columns is-mobile mt-3">
+          <div class="column">
+            <figure class="image is-48x48 ">
+              <img src="./images/avatar-michelle.jpg" class="is-rounded" alt="Michelle">
+            </figure>
+          </div>
+          <div class="column is-three-fifths">
+            <p class="has-text-weight-bold">Michelle Appleton</p>
+            <p class="is-size-7">28 Jun 2020</p>
+          </div>
+          <div class="column is-align-self-center">
+            <figure class="image is-24x24">
+              <img src="./images/icon-share.svg" alt="Share">
+            </figure>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
