botão share criado e funcionando

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               it felt slightly bare and uninviting. I’ve got some simple tips 
               to help you make any room feel complete.
             </p>
-            <div class="columns is-mobile mt-3">
+            <div class="columns is-mobile mt-3 pre-share">
               <div class="column">
                 <figure class="image is-48x48 ">
                   <img src="./images/avatar-michelle.jpg" class="is-rounded" alt="Michelle">
@@ -51,10 +51,40 @@
                 </figure>
               </div>
             </div>
+            <div class="columns is-mobile mt-3 background pos-share hidden">
+              <div class="column">
+                <p class="is-size-5 is-align-self-center share-text">Share</p>
+              </div>
+              <div class="column share">
+                <div class="columns is-mobile">
+                  <div class="column">
+                    <figure class="image is-24x24">
+                      <img src="./images/icon-facebook.svg" alt="Facebook">
+                    </figure>
+                  </div>
+                  <div class="column">
+                    <figure class="image is-24x24">
+                      <img src="./images/icon-twitter.svg" alt="Twitter">
+                    </figure>
+                  </div>
+                  <div class="column">
+                    <figure class="image is-24x24">
+                      <img src="./images/icon-pinterest.svg" alt="Pinterest">
+                    </figure>
+                  </div>
+                </div>
+              </div>
+              <div class="column share right">
+                <figure class="image is-24x24" id="share-icon">
+                  <img src="./images/icon-share.svg" alt="Share">
+                </figure>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </main>
+  <script src="script.js"></script>
 </body>
 </html>
